static/src/components/NavBar/Search/Search.scss
$font: "Montserrat";
$logo_color: #87ceebff;

#search_menu {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  width: 100vw;
  margin: 2.45rem 0;
  margin-inline: auto;
  box-sizing: border-box;
  width: fit-content;
  z-index: 20;
  font-family: $font;
  background-color: #f1f1f1;
  border-top-right-radius: 21px;
  border-top-left-radius: 21px;
  border-bottom-right-radius: 21px;
  border-bottom-left-radius: 21px;
  box-shadow: 0px 2px 10px black;
  display: flex;
  flex-direction: column;
  align-items: center;


  #search_bar {
    display: flex;
    align-items: center;
    background-color: white;
    padding: 0;
    padding: 0 12px 0 12px;
    border-radius: 100px;
    height: 40px;
    border: 1px solid #3a3a3a;

    .mag_glass {
      color: #3a3a3a;
    }

    input#search_bar_input {
      height: 38px;
      all: unset;
      color: #3a3a3a;
      font-weight: 600;
      font-size: 16px;
      padding-left: 14px;
      width: 60vw;
      max-width: 622px;
      box-sizing: border-box;



      &::placeholder {
        color: #3a3a3a;
      }
    }

    #exit_search {
      all: unset;
      cursor: pointer;
      margin-top: 3px;
      color: #4f4f4f;
    }

  }

  #suggestions {
    width: 100%;
    padding-left: 10px;
    padding-right: 10px;
    box-sizing: border-box;

    ul {
      list-style: none;
      padding-left: 0;
      width: 100%;

      li {
        text-overflow: ellipsis;
        white-space: nowrap;
        width: 100%;
        overflow: hidden;
        cursor: pointer;
        box-sizing: border-box;
        border-radius: 20px;
        padding: 5px 15px;
        margin-bottom: 5px;

        &:hover {
          background-color: #e0e0e0;
        }


      }

    }
  }

  #date_picker {
    display: flex;
    flex-direction: column;

    #date_top {
      display: flex;
      justify-content: space-between;
      width: 100%;
      margin: 14px 0;

      .return_single_buttons {
        all: unset;
        width: 100%;
        text-align: center;
        padding: 13px 0px;
        cursor: pointer;
        background-color: #676767;
        color: white;
        transition: background-color .2s;


        &.left {
          border-top-left-radius: 15px;
          border-bottom-left-radius: 15px;
        }

        &.right {
          border-top-right-radius: 15px;
          border-bottom-right-radius: 15px;
        }

        &:hover {
          background-color: #87ceebff;
        }

        &.active {
          background-color: #87ceebff;
          font-weight: 600;
        }
      }
    }

    #date_message {
      position: absolute;

      opacity: 0;
      transition: opacity .2s ease;

      &.active {
        opacity: 1;
        background-color: #87ceebff;
        color: white;
        font-weight: 500;
        font-size: 18px;
        padding: 4px 8px;
        box-shadow: black 0px 2px 9px 0px;
        left: 35%;
        top: 60%;
        z-index: 3;
        width: fit-content;

      }
    }



    .next_date {
      margin: 10px 0;
    }
  }

  #finalised {
    display: flex;
    flex-direction: column;
    padding: 20px 0px;
  }
}

